--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/billing
-spring.datasource.username=fred
-spring.datasource.password=password
+spring.datasource.username=xxx
+spring.datasource.password=xxx
 spring.datasource.useSSL=false
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
